--- a/charts/podinfo/custom-values/production/values.yaml
+++ b/charts/podinfo/custom-values/production/values.yaml
@@ -1,6 +1,6 @@
 # Default values for podinfo.
 
-replicaCount: 2
+replicaCount: 1
 logLevel: info
 host: #0.0.0.0
 backend: #http://backend-podinfo:9898/echo
@@ -12,7 +12,7 @@ image:
   pullPolicy: IfNotPresent
 
 ui:
-  color: "#2e8b57" # "#ffd700" #"#34577c"
+  color:  "#ffd700" #"#2e8b57" # "#ffd700" #"#34577c"
   message: ""
   logo: ""
 
