change in foreground color and image

--- a/charts/podinfo/values.yaml
+++ b/charts/podinfo/values.yaml
@@ -8,11 +8,11 @@ backends: []
 
 image:
   repository: ghcr.io/stefanprodan/podinfo
-  tag: 6.3.6
+  tag: 6.3.5
   pullPolicy: IfNotPresent
 
 ui:
-  color: "#2e8b57" # "#ffd700" #"#34577c"
+  color: "#ffd700" #"#2e8b57"  #"#34577c"
   message: ""
   logo: ""
 
